# notes_project

./: .env  .gitignore  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml  settings.py
app/auth/: auth.py  database.py  manager.py  schemas.py
auth/: auth.py  database.py  manager.py  schemas.py
auth_service/: .gitignore  alembic.ini  main.py  pyproject.toml
auth_service/db/: database.py
auth_service/migrations/: env.py
auth_service/migrations/versions/: dcc01e5c01ec_initial.py
auth_service/models/: models.py
auth_service/routers/: users.py
auth_service/tests/: conftest.py  test_user.py
db/: dal.py  database.py
migrations/: env.py
migrations/versions/: 01fda8563a39_.py  5cfdf955a15a_.py  72eee2619f09_initial.py  9bf0c98556d1_changed_table.py
models/: models.py
notes_service/: .env  main.py  pyproject.toml  settings.py  utils.py
notes_service/crud/: note.py
notes_service/db/: mongo_db.py
notes_service/logic/: note.py
notes_service/models/: note.py
notes_service/routers/: note.py
notes_service/routers/depends/: depends.py
notes_service/schemas/: note.py
notes_service/tests/: conftest.py  pytest.ini  test_note.py
routers/: depends.py  oauth.py  users.py
schemas/: oauth.py  user.py
tests/: conftest.py  test_user.py
