[tool.poetry]
name = "notes-project"
version = "0.1.0"
description = ""
authors = ["simonsnag <simonsnag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.0.2"
greenlet = "^2.0.2"
httpx = "^0.24.1"
uvicorn = "^0.23.2"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
pydantic = "^2.6.4"
uuid = "^1.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
httpx-oauth = "^0.13.2"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytest-asyncio = "^0.23.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
