[tool.poetry]
name = "notes-project"
version = "0.1.0"
description = ""
authors = ["simonsnag <simonsnag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.0.2"
greenlet = "^2.0.2"
httpx = "^0.24.1"
uvicorn = "^0.23.2"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
pydantic = {extras = ["email"], version = "^2.6.4"}
uuid = "^1.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
httpx-oauth = "^0.13.2"
python-multipart = "^0.0.9"
pytest = "^8.1.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
pytest-asyncio = "^0.23.6"
python-selvpcclient = "^2.5.0"
mypy = "^1.9.0"
types-passlib = "^1.7.7.20240327"
types-python-jose = "^3.3.4.20240106"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
exclude = [
    "alembic",
    "tests"
]